--- a/.github/workflows/daily-news.yml
+++ b/.github/workflows/daily-news.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install Japanese Fonts
+        run: sudo apt-get update && sudo apt-get install -y fonts-noto-cjk
+
       - name: Fetch AI News and Generate Props
         env:
           LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
